{
    "name": "PathbuilderKeybinds",
    "maps": [
        {
            "name": "Pathbuilder",
            "id": "cd62ed56-df6b-4ac8-b3ba-7ba9f73fc720",
            "actions": [
                {
                    "name": "SelectTarget",
                    "type": "Button",
                    "id": "c5089688-2c93-454f-963d-a8392d6a6786",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SnapAngle",
                    "type": "Button",
                    "id": "de60ffa4-a290-4398-98ed-53038df98fed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "fd8b12fb-3334-4527-b63f-46dc093ac20b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "54fa8ae1-6f2b-48d3-a586-a044bc83605c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10fd6f9e-eead-48b2-8cc2-750d77ea1d55",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SnapAngle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0c13960-7509-45c4-898a-8619a52233f2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}